// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner large 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner--spinner- Spinner--spinnerLarge-"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner medium 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner--spinner- Spinner--spinnerMedium-"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner small 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner--spinner- Spinner--spinnerSmall-"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner with custom class name 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner--spinner- testClassName1337 Spinner--spinnerLarge-"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner with delay 1`] = `null`;
